--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="game">
-        <div id="dino"></div>
-        <div id="cactus"></div>
+  <div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="game">
+                <div id="dino"></div>
+                <div id="cactus"></div>
+            </div>
+        </div>
     </div>
+  </div>
 
 
 
     <script src="script.js"></script>
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
